--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ button{
   html,body{
     display: grid;
     place-items: center;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(-45deg, #fff200, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100%;
@@ -43,7 +43,6 @@ button{
     font-weight: 500;
     letter-spacing: 1px;
     border-radius: 5px;
-    text-transform: uppercase;
     border: 1px solid transparent;
     outline: none;
     background: #500000;
@@ -89,5 +88,5 @@ button:before, button:after{
 .App{
     border-radius: 10px;
     height: 250px;
-    background-color: #46ff25a4;
+    background-color: #ff2525a4;
 }
