--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ button{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Montserrat',sans-serif;
   }
   html,body{
     display: grid;
@@ -40,7 +40,7 @@ button{
     width: 100px;
     margin: 0 40px;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: bold;
     letter-spacing: 1px;
     border-radius: 5px;
     border: 1px solid transparent;
